Fix inner height of articles section
Due to absolute positioning the articles section was overflowing the background.  Needed js to fix this as no obvious css solution.

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -51,6 +51,7 @@ body .off-canvas-wrapper {
 	height: 100%;
 	width: 100%;
 	overflow-y: visible;
+	position: initial;
 
 	.off-canvas-content {
 		height: 100%;
